<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewModel"
            type="com.example.toyrobotsimulator.viewmodel.RobotViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tvPosition"
            android:adapter="@{viewModel.gridAdapter}"
            />

        <LinearLayout
            android:id="@+id/controlsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMove"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.moveRobot()}"
                android:text="@string/move" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTurnLeft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.turnLeft()}"
                android:text="@string/turn_left" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnTurnRight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="@{() -> viewModel.turnRight()}"
                android:text="@string/turn_right" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/positionPlaceLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/controlsLayout"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/xAxisEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/x_position">
            </EditText>
            <EditText
                android:id="@+id/yAxisEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_toEndOf="@+id/xAxisEditText"
                android:hint="@string/y_position">
            </EditText>

            <Spinner
                android:id="@+id/spinnerDirection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/yAxisEditText"
                android:contentDescription="@string/place" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/spinnerDirection"
                android:text="@string/place" />
        </RelativeLayout>
        <TextView
            android:id="@+id/tvPosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_below="@+id/positionPlaceLayout"
            android:text="@string/initial_position"/>
    </RelativeLayout>
</layout>